--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
+}
+.body {
+  padding: 0;
+  margin: 0;
+}
 .navGradient {
   background-image: linear-gradient(
     to right,
@@ -11,4 +20,51 @@ h1 {
   color: white;
   text-align: center;
   padding: 1rem;
+}
+/* container custom */
+.customContainer {
+  padding: 0;
+  margin-left: 0;
+}
+/* search div */
+.searchCity {
+  padding: 0;
+}
+.searchCityDiv input,
+.searchBtn {
+  width: 18rem;
+}
+.searchCityDiv label {
+  color: black;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.searchCityDiv input {
+  border: 1px solid black;
+  height: 2.5rem;
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+.searchBtn {
+  color: white;
+  background-color: rgb(80, 152, 230);
+  margin: 1rem 0;
+}
+/* searched city list */
+.list-group-item {
+  text-align: center;
+}
+/* current weather */
+.weatherInfo {
+  padding-left: 0;
+}
+.currentWeather {
+  margin-top: 0.5rem;
+  border: 1px solid black;
+}
+/* Five Day forecast*/
+.day {
+  background-color: rgb(45, 62, 80);
+  color: white;
+  margin-right: 1rem;
 }
