--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,13 +59,15 @@ hr {
   padding: 0;
   width: 90%;
 }
-.list-item {
+
+.cityBtn {
   background-color: rgb(174, 174, 174);
   margin-top: 1rem;
   text-align: center;
   margin-left: 0%;
   padding: 0.5rem;
   border-radius: 5px;
+  width: 100%;
 }
 /* searched city list */
 
@@ -78,6 +80,9 @@ hr {
   border: 1px solid black;
 }
 /* Five Day forecast*/
+.dailyForecastDate {
+  font-weight: bold;
+}
 .forecastDay {
   background-color: rgb(45, 62, 80);
   color: white;
