cleared the .forecast div before looping through 5 day forecast to create new elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,10 +30,14 @@ h1 {
 .searchCity {
   padding: 0;
 }
+input {
+  padding: 5px;
+}
 .searchCityDiv input,
 .searchBtn {
   width: 90%;
 }
+
 .searchCityDiv label {
   color: black;
   font-size: 2rem;
