--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,7 @@
   padding: 0;
   margin: 0;
 }
+/*Navigation Bar/Header*/
 .navGradient {
   background-image: linear-gradient(
     to right,
@@ -31,7 +32,7 @@ h1 {
   padding: 0;
 }
 input {
-  padding: 5px;
+  padding: 0.5rem;
 }
 .searchCityDiv input,
 .searchBtn {
